[project]
name = "deepml-4fun"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mateusz Konopelski", email = "ml.konopelski@gmail.com"},
]
dependencies = ["numpy>=2.1.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
